tests/e2e/full_string_interpolation_return.error
Error: syntax error in story at line 1, column 5

1|    a = "foo{return}"
          ^^^^^^^^^^^^^

E0057: Only expressions are allowed inside string templates
